Fixes text alignment following FontAwesome changes (#4465)

--- a/seed/static/seed/scss/style.scss
+++ b/seed/static/seed/scss/style.scss
@@ -3745,7 +3745,7 @@ $pairedCellWidth: 60px;
   div {
     position: relative;
     text-align: right;
-    top: -2px;
+    top: -6px;
     width: 20px;
   }
 }
